src/tests/snapshots/cargo_vet__tests__audit_as_crates_io__audit-as-crates-io-metadata-mismatch.snap
---
source: src/tests/audit_as_crates_io.rs
expression: output
---
  × There are some issues with your policy.audit-as-crates-io entries

Error: 
  × some audit-as-crates-io packages don't match published crates.io versions
  │   descriptive:10.0.0
  help: Remove the audit-as-crates-io entries or make them `false`
