src/tests/snapshots/cargo_vet__tests__audit_as_crates_io__audit-as-crates-io-non-first-party.snap
---
source: src/tests/audit_as_crates_io.rs
expression: output
---
  × There are some issues with your policy.audit-as-crates-io entries

Error: 
  × some audit-as-crates-io policies don't match first-party crates
  │   third-core
  │   thirdA
  │   thirdAB
  help: Remove the audit-as-crates-io entries
