src/tests/snapshots/cargo_vet__tests__audit_as_crates_io__complex-audit-as-crates-io-max-wrong-json.snap
---
source: src/tests/audit_as_crates_io.rs
expression: output
---
{"message": "There are some issues with your policy.audit-as-crates-io entries","severity": "error","causes": [],"labels": [],"related": [{"message": "Some non-crates.io-fetched packages match published crates.io versions\n  firstA:10.0.0\n  firstAB:10.0.0\n  firstB:10.0.0\n  firstB-nodeps:10.0.0","severity": "error","causes": [],"help": "Add a `policy.*.audit-as-crates-io` entry for them","labels": [],"related": []},{"message": "some audit-as-crates-io packages don't match published crates.io versions\n  rootA:10.0.0\n  rootB:10.0.0","severity": "error","causes": [],"help": "Remove the audit-as-crates-io entries or make them `false`","labels": [],"related": []}]}
