src/tests/snapshots/cargo_vet__tests__audit_as_crates_io__complex-audit-as-crates-io.snap
---
source: src/tests/audit_as_crates_io.rs
expression: output
---
  × There are some issues with your policy.audit-as-crates-io entries

Error: 
  × Some non-crates.io-fetched packages match published crates.io versions
  │   firstA:10.0.0
  │   firstAB:10.0.0
  │   firstB:10.0.0
  │   firstB-nodeps:10.0.0
  help: Add a `policy.*.audit-as-crates-io` entry for them
